# LiteLLM_Desktop_MacOS

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
docs/plans/: 2026-03-27-litellm-tauri-design.md  2026-03-27-litellm-tauri.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  environment.rs  logs.rs  main.rs  proxy_manager.rs  runtime.rs  test_request.rs
src/components/: config-panel.test.tsx  config-panel.tsx  logs-panel.test.tsx  logs-panel.tsx  overview-panel.test.tsx  overview-panel.tsx  shell.test.tsx  shell.tsx  test-panel.test.tsx  test-panel.tsx
src/lib/: api.ts  default-config.test.ts  default-config.ts  sounds.ts
src/types/: config.ts
